# relife-platform-data-layer

./: .env.default  .gitignore  README.md  Taskfile.yml  docker-compose-examples.yml  docker-compose.yml
central-services/: .env.supabase.tmpl  .gitignore  Caddyfile  Taskfile.backup.yml  Taskfile.proxy.yml  Taskfile.yml  docker-compose-backup.yml  docker-compose-keycloak.yml  docker-compose-proxy.yml  docker-compose-supabase-s3.yml  docker-compose-supabase.yml  docker-compose.yml
central-services/backup/: Dockerfile  README.md  entrypoint.sh  ofelia-config.ini
central-services/backup/scripts/: backup.sh  get-network-name.sh  manual-backup.sh
central-services/keycloak-config/: service.json  supabase.json
central-services/supabase/migrations/: 20250331122648_init.sql  20260512113900_rse_cache.sql  (+4 more)
example-open-access-tool/: .env.example  Caddyfile  Dockerfile  README.md  package-lock.json  package.json  vite.config.js
example-open-access-tool/src/: App.jsx  auth.js  config.js
example-service-api/: README.md
open-access-tool/: package-lock.json  package.json
open-access-tool-01/: package-lock.json  package.json  vite.config.js
open-access-tool-01/src/: App.jsx  auth.js  hooks.jsx
open-access-tool/src/: App.jsx  hooks.jsx
service-api/: Dockerfile  README.md  pyproject.toml
service-api/src/service_api/: __init__.py  app.py
service-api/src/service_api/auth/: dependencies.py  keycloak.py
service-api/src/service_api/config/: settings.py
service-api/src/service_api/models/: auth.py
service-api/src/service_api/routes/: auth.py  reports.py  storage.py
(+9 files in other folders)
